[package]
name = "endless-fir"
version = "0.1.0"
authors = ["Frank King <frankking1729@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15", features = ["vulkan"]}
log = {version = "0.4"}
